# Apple-M1-inference

./: .dockerignore  .env  .gitignore  Justfile  README.md  docker-compose.yml  opencode.json  pyproject.toml
.claude/router/: config.json
.qwen/: settings.json
configs/: bench.yaml  model_aliases.yaml  models.yaml
dataset/: bench_prompts.json  dataset.yaml  turboquant_2504_19874v1.md
docs/: MLX.md  Qwen.md  benchmark.md  ollama.md
docs/IDEs/: CCR.md  OpenCode.md  QwenCode.md
docs/benchmarks/: performance.md  toolset.md
docs/clients/: CCR.md  OpenCode.md  QwenCode.md
docs/development/: benchmark-runtime-model-composition-plan.md
docs/models/: Qwen.md
docs/servers/: MLX.md  OptiQ.md  devcontainer.md  ollama.md
results/llama.cpp-turboquant-s3-mt32-cache-request/20260416T113236Z/: llama.cpp-unsloth-Qwen3.5-9B-GGUF-Q4_K_M-64k-s3.json  llama.cpp-unsloth-Qwen3.5-9B-GGUF-Q4_K_M-64k-s3.md
scripts/: benchmark.py  ollama-build-models.sh  setup-256k-context.sh
scripts/utils/: __init__.py
src/: mlx_server_shared.py  model_aliases.py
src/bench/: __init__.py  composition.py  config.py  dataset_tools.py  datasets.py  handlers.py  metrics.py  process.py  runner.py  utils.py
src/bench/dataset/: __init__.py  (+2 more)
src/cli/: benchmark.py  dataset.py  mlx_cli.py
src/mlx-openai-optiq-server/: Dockerfile  mlx-openai-optiq-server.py  requirements.txt
src/mlx-openai-server/: mlx-openai-server.py
src/servers/: __init__.py  mlx_openai_optiq_server.py  mlx_openai_server.py
src/shared/: mlx_openai_app.py  mlx_server.py  models.py
tests/: test_bench_stats.py
(+20 files in other folders)
