[project]
name = "localfirst-mlx"
version = "0.1.0"
description = "Local MLX inference servers for standard and Optiq runtimes"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "huggingface-hub",
  "mlx>=0.31.1",
  "mlx-lm>=0.30.7",
  "mlx-optiq",
  "pydantic",
  "requests",
  "uvicorn",
]

[project.scripts]
benchmark = "src.cli.benchmark:main"
dataset = "src.cli.dataset:main"
mlx-cli = "src.cli.mlx_cli:main"
mlx-openai-server = "src.servers.mlx_openai_server:main"
mlx-openai-optiq-server = "src.servers.mlx_openai_optiq_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
